# BTE

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
annotator/: README.md  app.py  sampling.py
bte/: __init__.py  _util.py  bbp.py  bench.py  canonical.py  conflict.py  domains.py  evaluate.py  extraction.py  graph.py  ingest.py  lattice.py  llm.py  memory.py  probe.py  probe_bench.py  retrieval.py  rules.py  stale_bench.py
bte/baselines/: mem0_adapter.py
data/probe/: README.md  probe_v0.json  probe_v0.json.sha256
docs/: README.md  bitemporal-model.md  contradiction-detection.md  evaluation-benchmarks.md  formalism.md  models.md  proposed-model.md  related-work.md  truth-maintenance-systems.md
pilot/: analyze_runs.py  audit_probe.py  bakeoff_extraction.py  diagnose_probe_item.py  diagnose_question.py  diagnose_stale_item.py  e2e_probe_demo.py  generate_probe.py  ingest_demo.py  load_beam.py  load_locomo.py  load_longmemeval.py  load_stale.py  run_longmemeval.py  run_probe.py  run_stale.py  score_internal_state.py  smoke_test_mem0.py
tests/: conftest.py  test_bbp_properties.py  test_bench.py  test_canonical.py  test_domain_conflict.py  test_extraction.py  test_graph.py  test_ingest.py  test_lattice.py  test_memory.py  test_probe.py  test_probe_bench.py  test_retrieval.py  test_run_longmemeval.py  test_run_probe.py  test_run_stale.py  test_semantic_conflict.py  test_stale_bench.py  test_state_basis.py  test_theorem1.py  test_util.py
