[project]
name = "bte"
version = "0.0.1"
description = "Bitemporal contradiction propagation for conversational memory (research code)"
requires-python = ">=3.12"
dependencies = [
    "mem0ai>=2.0.11",
    "openai>=2.44.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.156.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bte"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
